Class-Code/1.Control Statements/Conditional Statements/Switch Statements/program3.txt
class switchDemo{

        public static void main(String[]args){

                int ch = 65;
                switch(ch){

                        case 'A':
                                System.out.println("Char-A");
                                break;

                        case 65:
                                System.out.println("Num-65");
                                break;

                        case 'B':
                                System.out.println("char-B");
                                break;

                        case 66:
                                System.out.println("First-5");
                                break;

                        default :
                                System.out.println("No Match");
                                break;
                }
        }
}
//O/P :

    /*dips.java:12: error: duplicate case label
                        case 65:
                        ^
    dips.java:20: error: duplicate case label
                        case 66:
                        ^
    2 errors*/